--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,13 +1,14 @@
 <Project>
 
   <PropertyGroup>
-    <Version>1.3.4</Version>
+    <Version>1.3.5</Version>
     <Company>Jerro</Company>
     <Copyright>Copyright (C) Jerry Berry</Copyright>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>nullable</WarningsAsErrors>
     <IsPackable>false</IsPackable>
+    <NoWarn>CS1591</NoWarn>
   </PropertyGroup>
 
   <!-- Disable nullability warnings on frameworks where BCL is not annotated -->
