--- a/SoundCloudExplode/SoundCloudExplode.csproj
+++ b/SoundCloudExplode/SoundCloudExplode.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <!--<TargetFrameworks>net6.0;net5.0;netstandard2.1;netstandard2.0;net472;netcoreapp3.0</TargetFrameworks>-->
-    <TargetFrameworks>net5.0;netstandard2.1;netstandard2.0;net461;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net7.0;net5.0;netstandard2.1;netstandard2.0;net461;netcoreapp3.1</TargetFrameworks>
     <IsPackable>true</IsPackable>
     <Description>Parses public metadata on SoundCloud tracks/playlists and lets you download them. Does not require an API key and does not impose usage quotas.</Description>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -17,14 +17,12 @@
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'netstandard2.1' or '$(TargetFramework)' == 'net461'">
+  <!--<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'netstandard2.1' or '$(TargetFramework)' == 'net461' or '$(TargetFramework)' == 'net5.0'">
     <PackageReference Include="System.Text.Json" Version="6.0.7" />
-  </ItemGroup>
+  </ItemGroup>-->
 
-  <ItemGroup>
-    <Compile Remove="Http\**" />
-    <EmbeddedResource Remove="Http\**" />
-    <None Remove="Http\**" />
+  <ItemGroup Condition="'$(TargetFrameworkIdentifier)' != '.NETCoreApp' or '$(TargetFramework)' == 'netcoreapp3.1' or '$(TargetFramework)' == 'net5.0'">
+    <PackageReference Include="System.Text.Json" Version="6.0.7" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,7 +31,6 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
 </Project>
