--- a/SoundCloudExplode.Demo.Cli/SoundCloudExplode.Demo.Cli.csproj
+++ b/SoundCloudExplode.Demo.Cli/SoundCloudExplode.Demo.Cli.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.47.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SoundCloudExplode\SoundCloudExplode.csproj" />
   </ItemGroup>
 
