--- a/SoundCloudExplode/SoundCloudExplode.csproj
+++ b/SoundCloudExplode/SoundCloudExplode.csproj
@@ -3,18 +3,32 @@
   <PropertyGroup>
     <TargetFrameworks>net6.0;net5.0;netstandard2.1;netstandard2.0;net461;netcoreapp3.1</TargetFrameworks>
     <IsPackable>true</IsPackable>
-    <Description>Parses public metadata on SoundCloud tracks/playlists and lets you download them. Does not require an API key and does not impose usage quotas.</Description>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <!-- NuGet -->
+  <PropertyGroup>
+    <Authors>$(Company)</Authors>
+    <Description>Library that provides an interface to query metadata of SoundCloud tracks and playlists, as well as to resolve and download audio.</Description>
+    <PackageTags>soundcloud download playlist user channel tracks parse extract metadata info net core standard</PackageTags>
+    <PackageProjectUrl>https://github.com/jerry08/SoundCloudExplode</PackageProjectUrl>
+    <PackageIcon>favicon.png</PackageIcon>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
+  <!-- Package additions -->
   <ItemGroup>
-    <None Remove="favicon.ico" />
+    <None Include="../favicon.png" Pack="true" PackagePath="" Visible="false" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.50" />
-    <PackageReference Include="PolyShim" Version="1.5.0" PrivateAssets="all" />
-    <PackageReference Include="System.Text.Json" Version="7.0.3" Condition="'$(TargetFrameworkIdentifier)' != '.NETCoreApp' or '$(TargetFramework)' == 'netcoreapp3.1' or '$(TargetFramework)' == 'net5.0'" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="all" />
+    <PackageReference Include="PolyShim" Version="1.7.0" PrivateAssets="all" />
+    <PackageReference Include="System.Text.Json" Version="7.0.3" Condition="'$(TargetFrameworkIdentifier)' != '.NETCoreApp' or '$(TargetFramework)' == 'netcoreapp3.1'" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
