--- a/SoundCloudExplode.Demo.Cli/SoundCloudExplode.Demo.Cli.csproj
+++ b/SoundCloudExplode.Demo.Cli/SoundCloudExplode.Demo.Cli.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Spectre.Console" Version="0.47.0" />
+    <PackageReference Include="Spectre.Console" Version="0.49.1" />
+    <PackageReference Include="CSharpier.MsBuild" Version="0.28.2" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
